src/FrontEnd/Parser/Arbor_parser.output
Nonterminals useless in grammar

    template_tyepdef


Terminals unused in grammar

    "initialize"


Rules useless in grammar

  327 template_tyepdef: %empty


Grammar

    0 $accept: start $end

    1 start: program_units
    2      | %empty

    3 type: "const" type_root
    4     | type_root

    5 type_root: non_reference_type
    6          | reference_type

    7 non_reference_type: type_core
    8                   | type_core POINTER_TYPE
    9                   | type_core "weak" POINTER_TYPE
   10                   | type_core ARRAYL xvalue_expression ARRAYR

   11 type_core: TYPENAME type_template_paramaters
   12          | TYPENAME
   13          | "bit"
   14          | "bool"
   15          | "short"
   16          | "int"
   17          | "long"
   18          | "float"
   19          | "char"

   20 type_template_paramaters: T_BEGIN type_list T_END

   21 type_list: type
   22          | type_list "," type

   23 reference_type: "ref" non_reference_type
   24               | "rref" non_reference_type

   25 expression: assignment_arg_expression
   26           | xvalue_expression "=" rvalue_expression

   27 expression0: expression
   28            | %empty

   29 assignment_arg_expression: xvalue_expression
   30                          | prvalue_expression

   31 prvalue_expression: literal
   32                   | "super"
   33                   | rvalue_expression "+" rvalue_expression
   34                   | rvalue_expression "-" rvalue_expression
   35                   | rvalue_expression "*" rvalue_expression
   36                   | rvalue_expression "/" rvalue_expression
   37                   | rvalue_expression "//" rvalue_expression
   38                   | rvalue_expression "^^" rvalue_expression
   39                   | xvalue_expression "+=" rvalue_expression
   40                   | xvalue_expression "-=" rvalue_expression
   41                   | xvalue_expression "*=" rvalue_expression
   42                   | xvalue_expression "/=" rvalue_expression
   43                   | xvalue_expression "//=" rvalue_expression
   44                   | xvalue_expression "^^=" rvalue_expression
   45                   | rvalue_expression ">" rvalue_expression
   46                   | rvalue_expression ">=" rvalue_expression
   47                   | rvalue_expression "<=" rvalue_expression
   48                   | rvalue_expression "<=>" rvalue_expression
   49                   | rvalue_expression "!=" rvalue_expression
   50                   | rvalue_expression "==" rvalue_expression
   51                   | rvalue_expression "&&" rvalue_expression
   52                   | rvalue_expression "||" rvalue_expression
   53                   | rvalue_expression "&" rvalue_expression
   54                   | rvalue_expression "^" rvalue_expression
   55                   | rvalue_expression "|" rvalue_expression
   56                   | rvalue_expression "~" rvalue_expression
   57                   | rvalue_expression ">>" rvalue_expression
   58                   | rvalue_expression "<<" rvalue_expression
   59                   | xvalue_expression "&=" rvalue_expression
   60                   | xvalue_expression "^=" rvalue_expression
   61                   | xvalue_expression "|=" rvalue_expression
   62                   | xvalue_expression "~=" rvalue_expression
   63                   | xvalue_expression ">>=" rvalue_expression
   64                   | xvalue_expression "<<=" rvalue_expression
   65                   | rvalue_expression "is" type
   66                   | "!" rvalue_expression
   67                   | "-" rvalue_expression
   68                   | "typeof" "(" rvalue_expression ")"
   69                   | "castas" "<" type ">" "(" rvalue_expression ")"
   70                   | "(" rvalue_expression ")" "?" rvalue_expression ":" rvalue_expression
   71                   | new_expression
   72                   | lambda_expression

   73 rvalue_expression: prvalue_expression
   74                  | xvalue_expression

   75 xvalue_expression: IDENTIFIER
   76                  | "this"
   77                  | "++" xvalue_expression
   78                  | "--" xvalue_expression
   79                  | xvalue_expression "++"
   80                  | xvalue_expression "--"
   81                  | "*" xvalue_expression
   82                  | xvalue_expression "." xvalue_expression
   83                  | xvalue_expression "->" xvalue_expression
   84                  | "(" rvalue_expression ")"
   85                  | "[" array_index_list "]"
   86                  | function_call

   87 literal: BOOL
   88        | NPTR
   89        | INT
   90        | FLOAT
   91        | STRING
   92        | CHAR

   93 lambda_expression: "(" function_argument_list ")" "->" return_types_list "=>" block_statement

   94 new_expression: "new" type "(" function_call_list ")"
   95               | "new" "heap" type "(" function_call_list ")"

   96 array_index_list: array_index
   97                 | array_index_list "," array_index

   98 array_index: expression
   99            | expression0 ":" expression0

  100 function_call: xvalue_expression "(" function_argument_list ")"
  101              | xvalue_expression "(" ")"

  102 function_call_list: function_call_arg
  103                   | function_call_list "," function_call_arg ";"

  104 function_call_arg: expression

  105 statement: block_statement
  106          | loop_statement
  107          | conditional_statement
  108          | exception_statement
  109          | clean_up_statement
  110          | jump_statement
  111          | expression_statement
  112          | variable_declaration_statement
  113          | no_op_statement

  114 block_statement: "{" statements0 "}"

  115 statements0: statements
  116            | %empty

  117 statements: statement
  118           | statements statement

  119 loop_statement: while_loop_statement
  120               | do_loop_statement
  121               | for_loop_statement

  122 while_loop_statement: "while" "(" expression ")" block_statement

  123 do_loop_statement: "do" block_statement "while" "(" expression ")"

  124 for_loop_statement: "for" "(" for_loop_condition ")" block_statement

  125 for_loop_condition: variable_declaration ";" expression0 ";" expression0
  126                   | variable_declaration "in" expression

  127 conditional_statement: if_statement_sequence
  128                      | switch_statement

  129 if_statement_sequence: if_statement else_if_statements0 else_statement0

  130 if_statement: "if" "(" expression ")" block_statement

  131 else_if_statements0: else_if_statements
  132                    | %empty

  133 else_if_statements: else_if_statement
  134                   | else_if_statements else_if_statement

  135 else_if_statement: "else-if" "(" expression ")" block_statement

  136 else_statement0: else_statement
  137                | %empty

  138 else_statement: "else" block_statement

  139 switch_statement: "switch" "(" expression ")" case_blocks0 default_block0

  140 case_blocks0: case_blocks
  141             | %empty

  142 case_blocks: case_block
  143            | case_blocks case_block

  144 case_block: "case" expression ":" block_statement jump_statement

  145 default_block0: default_block
  146               | %empty

  147 default_block: "default" ":" block_statement jump_statement

  148 exception_statement: try_block catch_blocks

  149 try_block: "try" block_statement

  150 catch_blocks: catch_block
  151             | catch_blocks catch_block

  152 catch_block: "catch" "(" variable_declaration ")" block_statement
  153            | "catch-all" block_statement

  154 clean_up_statement: "cleanup" "(" IDENTIFIER "," clean_up_arg ")" ";"

  155 clean_up_arg: IDENTIFIER
  156             | lambda_expression
  157             | function
  158             | anonymous_function

  159 jump_statement: "return" ";"
  160               | "break" ";"
  161               | "continue" ";"
  162               | "rethrow" ";"
  163               | "throw" expression ";"
  164               | "yield" ";"
  165               | "goto" IDENTIFIER ";"

  166 expression_statement: expression ";"

  167 variable_declaration_statement: variable_declaration ";"

  168 variable_declaration: "let" access_modifier0 variable_declaration_block_list

  169 variable_declaration_block_list: variable_declaration_block
  170                                | variable_declaration_block_list "," variable_declaration_block

  171 variable_declaration_block: "let" type IDENTIFIER
  172                           | "let" type IDENTIFIER "=" expression

  173 access_modifier0: access_modifier
  174                 | %empty

  175 access_modifier: "public"
  176                | "private"
  177                | "protected"

  178 no_op_statement: ";"

  179 function: template_header function_header block_statement
  180         | function_header block_statement

  181 function_header: "func" access_modifier function_modifiers IDENTIFIER "(" function_argument_list ")" throwable_expression "->" return_types_list
  182                | "func" IDENTIFIER "(" function_argument_list ")" throwable_expression "->" return_types_list

  183 function_modifiers: "virtual"
  184                   | "compeval"
  185                   | "static"
  186                   | "static" "compeval"
  187                   | "virtual const"
  188                   | "compeval const"
  189                   | %empty

  190 function_argument_list: function_argument
  191                       | function_argument_list "," function_argument

  192 function_argument: type IDENTIFIER
  193                  | type "..."
  194                  | type IDENTIFIER "=" expression

  195 throwable_expression: "nothrowable"
  196                     | "nothrowable" "(" expression ")"

  197 return_types_list: return_type
  198                  | return_types_list "," return_type

  199 return_type: type
  200            | "typeof" "(" expression ")"

  201 anonymous_function: template_header anonymous_function_header block_statement
  202                   | anonymous_function_header block_statement

  203 anonymous_function_header: "func" "compeval" "(" function_argument_list ")" throwable_expression "->" return_types_list
  204                          | "func" "(" function_argument_list ")" throwable_expression "->" return_types_list

  205 operator_overload: operator_overload_header block_statement
  206                  | operator_overload_header "=" function_options ";"

  207 operator_overload_header: template_declaration_type "operator" operator "(" function_argument_list ")" throwable_expression "->" return_types_list
  208                         | "operator" operator "(" function_argument_list ")" throwable_expression "->" return_types_list

  209 operator: "+"
  210         | "-"
  211         | "*"
  212         | "/"
  213         | "//"
  214         | "^^"
  215         | "%"
  216         | "+="
  217         | "-="
  218         | "*="
  219         | "/="
  220         | "//="
  221         | "^^="
  222         | "%="
  223         | ">"
  224         | ">="
  225         | "<"
  226         | "<="
  227         | "<=>"
  228         | "=="
  229         | "!="
  230         | "^"
  231         | "&"
  232         | "~"
  233         | "<<"
  234         | ">>"
  235         | "="
  236         | "++"
  237         | "--"
  238         | "[" "]"
  239         | "(" ")"
  240         | "->"
  241         | "new"
  242         | type

  243 function_options: "delete"
  244                 | "default"

  245 callable: function
  246         | operator_overload

  247 enum: "enum" "{" enum_members_list "}"

  248 enum_members_list: enum_member
  249                  | enum_members_list "," enum_member

  250 enum_member: IDENTIFIER
  251            | IDENTIFIER "=" INT

  252 class: class_header "{" class_statements "}"
  253      | class_header "{" "}"

  254 class_header: template_header "class" IDENTIFIER
  255             | template_header "class" IDENTIFIER inheritance

  256 inheritance: "inherits" class_names_list

  257 class_names_list: class_name
  258                 | class_names_list "," class_name

  259 class_name: IDENTIFIER
  260           | IDENTIFIER type_template_paramaters

  261 class_statements: class_statement
  262                 | class_statements class_statement

  263 class_statement: variable_declaration_statement
  264                | callable
  265                | constructor
  266                | destructor
  267                | property
  268                | class

  269 property: template_header "let" access_modifier "property" type IDENTIFIER "{" property_blocks "}" ";"
  270         | "let" access_modifier "property" type IDENTIFIER "{" property_blocks "}" ";"

  271 property_blocks: get_block
  272                | set_block
  273                | get_block set_block
  274                | set_block get_block

  275 get_block: "get" "(" ")" "=>" IDENTIFIER ";"
  276          | "get" "(" ")" block_statement

  277 set_block: "set" "(" ")" "=>" IDENTIFIER ";"
  278          | "set" "(" ")" block_statement

  279 constructor: constructor_header initializer_list block_statement
  280            | constructor_header initializer_list ";"
  281            | constructor_header block_statement
  282            | constructor_header "=" function_options ";"

  283 constructor_header: template_header "ctor" access_modifier compeval0 IDENTIFIER "(" function_argument_list ")" throwable_expression
  284                   | "ctor" access_modifier compeval0 IDENTIFIER "(" function_argument_list ")" throwable_expression

  285 initializer_list: "=>" "initailize" "(" initializer_blocks_list ")"

  286 initializer_blocks_list: initializer_block
  287                        | initializer_blocks_list "," initializer_block

  288 initializer_block: IDENTIFIER ":" rvalue_expression

  289 compeval0: "compeval"
  290          | %empty

  291 destructor: destructor_header block_statement
  292           | destructor_header "=" function_options ";"

  293 destructor_header: "~" IDENTIFIER "(" ")"

  294 template_header: template_declaration_list "=>"

  295 template_declaration_list: template_declaration_type
  296                          | template_declaration_list "," template_declaration_type

  297 template_declaration_type: "type" IDENTIFIER
  298                          | type IDENTIFIER
  299                          | type

  300 module: "module" module_name ";"
  301       | "module" module_name ":" IDENTIFIER ";"

  302 module_name: IDENTIFIER
  303            | module_name "." IDENTIFIER
  304            | module_name "-" IDENTIFIER

  305 import: "import" module_name ";"
  306       | "import" ":" IDENTIFIER ";"

  307 type_definition: access_modifier0 "define" type "as" IDENTIFIER ";"

  308 namespace: "namespace" module_name "{" namespace_units "}"
  309          | "namespace" module_name "{" "}"

  310 namespace_units: namespace_unit
  311                | namespace_units namespace_unit

  312 namespace_unit: class
  313               | enum
  314               | callable
  315               | type_definition
  316               | variable_declaration_statement

  317 program_units: program_unit
  318              | program_units program_unit

  319 program_unit: module
  320             | import
  321             | type_definition
  322             | callable
  323             | variable_declaration_statement
  324             | class
  325             | enum
  326             | namespace


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <std::string> (258) 75 154 155 165 171 172 181 182 192 194 250 251 254 255 259 260 269 270 275 277 283 284 288 293 297 298 301 302 303 304 306 307
    TYPENAME <std::string> (259) 11 12
    NPTR (260) 88
    BOOL <bool> (261) 87
    INT <int> (262) 89 251
    FLOAT <double> (263) 90
    CHAR <std::string> (264) 92
    STRING <std::string> (265) 91
    "as" (266) 307
    "break" (267) 160
    "bit" (268) 13
    "bool" (269) 14
    "case" (270) 144
    "castas" (271) 69
    "catch" (272) 152
    "catch-all" (273) 153
    "char" (274) 19
    "class" (275) 254 255
    "cleanup" (276) 154
    "const" (277) 3
    "continue" (278) 161
    "compeval" (279) 184 186 203 289
    "ctor" (280) 283 284
    "default" (281) 147 244
    "define" (282) 307
    "delete" (283) 243
    "do" (284) 123
    "else" (285) 138
    "else-if" (286) 135
    "enum" (287) 247
    "float" (288) 18
    "for" (289) 124
    "func" (290) 181 182 203 204
    "get" (291) 275 276
    "goto" (292) 165
    "heap" (293) 95
    "if" (294) 130
    "import" (295) 305 306
    "in" (296) 126
    "inherits" (297) 256
    "initialize" (298)
    "int" (299) 16
    "is" (300) 65
    "let" (301) 168 171 172 269 270
    "long" (302) 17
    "module" (303) 300 301
    "new" (304) 94 95 241
    "nothrowable" (305) 195 196
    "operator" (306) 207 208
    "private" (307) 176
    "property" (308) 269 270
    "protected" (309) 177
    "public" (310) 175
    "ref" (311) 23
    "rref" (312) 24
    "rethrow" (313) 162
    "return" (314) 159
    "set" (315) 277 278
    "short" (316) 15
    "static" (317) 185 186
    "super" (318) 32
    "switch" (319) 139
    "this" (320) 76
    "throw" (321) 163
    "try" (322) 149
    "typeof" (323) 68 200
    "virtual" (324) 183
    "weak" (325) 9
    "while" (326) 122 123
    "yield" (327) 164
    "[" (328) 85 238
    "]" (329) 85 238
    "<" (330) 69 225
    ">" (331) 45 69 223
    "," (332) 22 97 103 154 170 191 198 249 258 287 296
    "+" (333) 33 209
    "-" (334) 34 67 210 304
    "/" (335) 36 212
    "//" (336) 37 213
    "*" (337) 35 81 211
    "^^" (338) 38 214
    "%" (339) 215
    "+=" (340) 39 216
    "-=" (341) 40 217
    "*=" (342) 41 218
    "/=" (343) 42 219
    "//=" (344) 43 220
    "^^=" (345) 44 221
    "%=" (346) 222
    "<=" (347) 47 226
    ">=" (348) 46 224
    "==" (349) 50 228
    "!=" (350) 49 229
    "<=>" (351) 48 227
    "&&" (352) 51
    "||" (353) 52
    "&" (354) 53 231
    "|" (355) 55
    "!" (356) 66
    "^" (357) 54 230
    "~" (358) 56 232 293
    ">>" (359) 57 234
    "<<" (360) 58 233
    "=" (361) 26 172 194 206 235 251 282 292
    "++" (362) 77 79 236
    "--" (363) 78 80 237
    "(" (364) 68 69 70 84 93 94 95 100 101 122 123 124 130 135 139 152 154 181 182 196 200 203 204 207 208 239 275 276 277 278 283 284 285 293
    ")" (365) 68 69 70 84 93 94 95 100 101 122 123 124 130 135 139 152 154 181 182 196 200 203 204 207 208 239 275 276 277 278 283 284 285 293
    "?" (366) 70
    ":" (367) 70 99 144 147 288 301 306
    "." (368) 82 303
    "->" (369) 83 93 181 182 203 204 207 208 240
    "{" (370) 114 247 252 253 269 270 308 309
    "}" (371) 114 247 252 253 269 270 308 309
    "=>" (372) 93 275 277 285 294
    ";" (373) 103 125 154 159 160 161 162 163 164 165 166 167 178 206 269 270 275 277 280 282 292 300 301 305 306 307
    "..." (374) 193
    "&=" (375) 59
    "^=" (376) 60
    "|=" (377) 61
    "~=" (378) 62
    "<<=" (379) 64
    ">>=" (380) 63
    POINTER_TYPE (381) 8 9
    ARRAYL (382) 10
    ARRAYR (383) 10
    T_BEGIN (384) 20
    T_END (385) 20
    UMINUS (386)
    POSTINC (387)
    POSTDEC (388)
    TERN (389)
    DEREF (390)
    "virtual const" (391) 187
    "compeval const" (392) 188
    "initailize" (393) 285
    "type" (394) 297
    "namespace" (395) 308 309


Nonterminals, with rules where they appear

    $accept (141)
        on left: 0
    start (142)
        on left: 1 2
        on right: 0
    type (143)
        on left: 3 4
        on right: 21 22 65 69 94 95 171 172 192 193 194 199 242 269 270 298 299 307
    type_root (144)
        on left: 5 6
        on right: 3 4
    non_reference_type (145)
        on left: 7 8 9 10
        on right: 5 23 24
    type_core (146)
        on left: 11 12 13 14 15 16 17 18 19
        on right: 7 8 9 10
    type_template_paramaters (147)
        on left: 20
        on right: 11 260
    type_list (148)
        on left: 21 22
        on right: 20 22
    reference_type (149)
        on left: 23 24
        on right: 6
    expression (150)
        on left: 25 26
        on right: 27 98 104 122 123 126 130 135 139 144 163 166 172 194 196 200
    expression0 (151)
        on left: 27 28
        on right: 99 125
    assignment_arg_expression (152)
        on left: 29 30
        on right: 25
    prvalue_expression (153)
        on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
        on right: 30 73
    rvalue_expression (154)
        on left: 73 74
        on right: 26 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 84 288
    xvalue_expression (155)
        on left: 75 76 77 78 79 80 81 82 83 84 85 86
        on right: 10 26 29 39 40 41 42 43 44 59 60 61 62 63 64 74 77 78 79 80 81 82 83 100 101
    literal <prvalue_expression_node*> (156)
        on left: 87 88 89 90 91 92
        on right: 31
    lambda_expression (157)
        on left: 93
        on right: 72 156
    new_expression (158)
        on left: 94 95
        on right: 71
    array_index_list (159)
        on left: 96 97
        on right: 85 97
    array_index (160)
        on left: 98 99
        on right: 96 97
    function_call (161)
        on left: 100 101
        on right: 86
    function_call_list (162)
        on left: 102 103
        on right: 94 95 103
    function_call_arg (163)
        on left: 104
        on right: 102 103
    statement (164)
        on left: 105 106 107 108 109 110 111 112 113
        on right: 117 118
    block_statement (165)
        on left: 114
        on right: 93 105 122 123 124 130 135 138 144 147 149 152 153 179 180 201 202 205 276 278 279 281 291
    statements0 (166)
        on left: 115 116
        on right: 114
    statements (167)
        on left: 117 118
        on right: 115 118
    loop_statement (168)
        on left: 119 120 121
        on right: 106
    while_loop_statement (169)
        on left: 122
        on right: 119
    do_loop_statement (170)
        on left: 123
        on right: 120
    for_loop_statement (171)
        on left: 124
        on right: 121
    for_loop_condition (172)
        on left: 125 126
        on right: 124
    conditional_statement (173)
        on left: 127 128
        on right: 107
    if_statement_sequence (174)
        on left: 129
        on right: 127
    if_statement (175)
        on left: 130
        on right: 129
    else_if_statements0 (176)
        on left: 131 132
        on right: 129
    else_if_statements (177)
        on left: 133 134
        on right: 131 134
    else_if_statement (178)
        on left: 135
        on right: 133 134
    else_statement0 (179)
        on left: 136 137
        on right: 129
    else_statement (180)
        on left: 138
        on right: 136
    switch_statement (181)
        on left: 139
        on right: 128
    case_blocks0 (182)
        on left: 140 141
        on right: 139
    case_blocks (183)
        on left: 142 143
        on right: 140 143
    case_block (184)
        on left: 144
        on right: 142 143
    default_block0 (185)
        on left: 145 146
        on right: 139
    default_block (186)
        on left: 147
        on right: 145
    exception_statement (187)
        on left: 148
        on right: 108
    try_block (188)
        on left: 149
        on right: 148
    catch_blocks (189)
        on left: 150 151
        on right: 148 151
    catch_block (190)
        on left: 152 153
        on right: 150 151
    clean_up_statement (191)
        on left: 154
        on right: 109
    clean_up_arg (192)
        on left: 155 156 157 158
        on right: 154
    jump_statement (193)
        on left: 159 160 161 162 163 164 165
        on right: 110 144 147
    expression_statement (194)
        on left: 166
        on right: 111
    variable_declaration_statement (195)
        on left: 167
        on right: 112 263 316 323
    variable_declaration (196)
        on left: 168
        on right: 125 126 152 167
    variable_declaration_block_list (197)
        on left: 169 170
        on right: 168 170
    variable_declaration_block (198)
        on left: 171 172
        on right: 169 170
    access_modifier0 (199)
        on left: 173 174
        on right: 168 307
    access_modifier (200)
        on left: 175 176 177
        on right: 173 181 269 270 283 284
    no_op_statement (201)
        on left: 178
        on right: 113
    function (202)
        on left: 179 180
        on right: 157 245
    function_header (203)
        on left: 181 182
        on right: 179 180
    function_modifiers (204)
        on left: 183 184 185 186 187 188 189
        on right: 181
    function_argument_list (205)
        on left: 190 191
        on right: 93 100 181 182 191 203 204 207 208 283 284
    function_argument (206)
        on left: 192 193 194
        on right: 190 191
    throwable_expression (207)
        on left: 195 196
        on right: 181 182 203 204 207 208 283 284
    return_types_list (208)
        on left: 197 198
        on right: 93 181 182 198 203 204 207 208
    return_type (209)
        on left: 199 200
        on right: 197 198
    anonymous_function (210)
        on left: 201 202
        on right: 158
    anonymous_function_header (211)
        on left: 203 204
        on right: 201 202
    operator_overload (212)
        on left: 205 206
        on right: 246
    operator_overload_header (213)
        on left: 207 208
        on right: 205 206
    operator (214)
        on left: 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242
        on right: 207 208
    function_options (215)
        on left: 243 244
        on right: 206 282 292
    callable (216)
        on left: 245 246
        on right: 264 314 322
    enum (217)
        on left: 247
        on right: 313 325
    enum_members_list (218)
        on left: 248 249
        on right: 247 249
    enum_member (219)
        on left: 250 251
        on right: 248 249
    class (220)
        on left: 252 253
        on right: 268 312 324
    class_header (221)
        on left: 254 255
        on right: 252 253
    inheritance (222)
        on left: 256
        on right: 255
    class_names_list (223)
        on left: 257 258
        on right: 256 258
    class_name (224)
        on left: 259 260
        on right: 257 258
    class_statements (225)
        on left: 261 262
        on right: 252 262
    class_statement (226)
        on left: 263 264 265 266 267 268
        on right: 261 262
    property (227)
        on left: 269 270
        on right: 267
    property_blocks (228)
        on left: 271 272 273 274
        on right: 269 270
    get_block (229)
        on left: 275 276
        on right: 271 273 274
    set_block (230)
        on left: 277 278
        on right: 272 273 274
    constructor (231)
        on left: 279 280 281 282
        on right: 265
    constructor_header (232)
        on left: 283 284
        on right: 279 280 281 282
    initializer_list (233)
        on left: 285
        on right: 279 280
    initializer_blocks_list (234)
        on left: 286 287
        on right: 285 287
    initializer_block (235)
        on left: 288
        on right: 286 287
    compeval0 (236)
        on left: 289 290
        on right: 283 284
    destructor (237)
        on left: 291 292
        on right: 266
    destructor_header (238)
        on left: 293
        on right: 291 292
    template_header (239)
        on left: 294
        on right: 179 201 254 255 269 283
    template_declaration_list (240)
        on left: 295 296
        on right: 294 296
    template_declaration_type (241)
        on left: 297 298 299
        on right: 207 295 296
    module (242)
        on left: 300 301
        on right: 319
    module_name (243)
        on left: 302 303 304
        on right: 300 301 303 304 305 308 309
    import (244)
        on left: 305 306
        on right: 320
    type_definition (245)
        on left: 307
        on right: 315 321
    namespace (246)
        on left: 308 309
        on right: 326
    namespace_units (247)
        on left: 310 311
        on right: 308 311
    namespace_unit (248)
        on left: 312 313 314 315 316
        on right: 310 311
    program_units (249)
        on left: 317 318
        on right: 1 318
    program_unit (250)
        on left: 319 320 321 322 323 324 325 326
        on right: 317 318


State 0

    0 $accept: • start $end
    1 start: • program_units
    2      | • %empty  [$end]
    3 type: • "const" type_root
    4     | • type_root
    5 type_root: • non_reference_type
    6          | • reference_type
    7 non_reference_type: • type_core
    8                   | • type_core POINTER_TYPE
    9                   | • type_core "weak" POINTER_TYPE
   10                   | • type_core ARRAYL xvalue_expression ARRAYR
   11 type_core: • TYPENAME type_template_paramaters
   12          | • TYPENAME
   13          | • "bit"
   14          | • "bool"
   15          | • "short"
   16          | • "int"
   17          | • "long"
   18          | • "float"
   19          | • "char"
   23 reference_type: • "ref" non_reference_type
   24               | • "rref" non_reference_type
  167 variable_declaration_statement: • variable_declaration ";"
  168 variable_declaration: • "let" access_modifier0 variable_declaration_block_list
  173 access_modifier0: • access_modifier
  174                 | • %empty  ["define"]
  175 access_modifier: • "public"
  176                | • "private"
  177                | • "protected"
  179 function: • template_header function_header block_statement
  180         | • function_header block_statement
  181 function_header: • "func" access_modifier function_modifiers IDENTIFIER "(" function_argument_list ")" throwable_expression "->" return_types_list
  182                | • "func" IDENTIFIER "(" function_argument_list ")" throwable_expression "->" return_types_list
  205 operator_overload: • operator_overload_header block_statement
  206                  | • operator_overload_header "=" function_options ";"
  207 operator_overload_header: • template_declaration_type "operator" operator "(" function_argument_list ")" throwable_expression "->" return_types_list
  208                         | • "operator" operator "(" function_argument_list ")" throwable_expression "->" return_types_list
  245 callable: • function
  246         | • operator_overload
  247 enum: • "enum" "{" enum_members_list "}"
  252 class: • class_header "{" class_statements "}"
  253      | • class_header "{" "}"
  254 class_header: • template_header "class" IDENTIFIER
  255             | • template_header "class" IDENTIFIER inheritance
  294 template_header: • template_declaration_list "=>"
  295 template_declaration_list: • template_declaration_type
  296                          | • template_declaration_list "," template_declaration_type
  297 template_declaration_type: • "type" IDENTIFIER
  298                          | • type IDENTIFIER
  299                          | • type
  300 module: • "module" module_name ";"
  301       | • "module" module_name ":" IDENTIFIER ";"
  305 import: • "import" module_name ";"
  306       | • "import" ":" IDENTIFIER ";"
  307 type_definition: • access_modifier0 "define" type "as" IDENTIFIER ";"
  308 namespace: • "namespace" module_name "{" namespace_units "}"
  309          | • "namespace" module_name "{" "}"
  317 program_units: • program_unit
  318              | • program_units program_unit
  319 program_unit: • module
  320             | • import
  321             | • type_definition
  322             | • callable
  323             | • variable_declaration_statement
  324             | • class
  325             | • enum
  326             | • namespace

    TYPENAME     shift, and go to state 1
    "bit"        shift, and go to state 2
    "bool"       shift, and go to state 3
    "char"       shift, and go to state 4
    "const"      shift, and go to state 5
    "enum"       shift, and go to state 6
    "float"      shift, and go to state 7
    "func"       shift, and go to state 8
    "import"     shift, and go to state 9
    "int"        shift, and go to state 10
    "let"        shift, and go to state 11
    "long"       shift, and go to state 12
    "module"     shift, and go to state 13
    "operator"   shift, and go to state 14
    "private"    shift, and go to state 15
    "protected"  shift, and go to state 16
    "public"     shift, and go to state 17
    "ref"        shift, and go to state 18
    "rref"       shift, and go to state 19
    "short"      shift, and go to state 20
    "type"       shift, and go to state 21
    "namespace"  shift, and go to state 22

    "define"  reduce using rule 174 (access_modifier0)
    $default  reduce using rule 2 (start)

    start                           go to state 23
    type                            go to state 24
    type_root                       go to state 25
    non_reference_type              go to state 26
    type_core                       go to state 27
    reference_type                  go to state 28
    variable_declaration_statement  go to state 29
    variable_declaration            go to state 30
    access_modifier0                go to state 31
    access_modifier                 go to state 32
    function                        go to state 33
    function_header                 go to state 34
    operator_overload               go to state 35
    operator_overload_header        go to state 36
    callable                        go to state 37
    enum                            go to state 38
    class                           go to state 39
    class_header                    go to state 40
    template_header                 go to state 41
    template_declaration_list       go to state 42
    template_declaration_type       go to state 43
    module                          go to state 44
    import                          go to state 45
    type_definition                 go to state 46
    namespace                       go to state 47
    program_units                   go to state 48
    program_unit                    go to state 49


State 1

   11 type_core: TYPENAME • type_template_paramaters
   12          | TYPENAME •  [IDENTIFIER, "as", "in", "is", "operator", "weak", "]", ">", ",", "+", "-", "/", "//", "*", "^^", "<=", ">=", "==", "!=", "<=>", "&&", "||", "&", "|", "^", "~", ">>", "<<", "=", "(", ")", ":", "{", "=>", ";", "...", POINTER_TYPE, ARRAYL, T_END]
   20 type_template_paramaters: • T_BEGIN type_list T_END

    T_BEGIN  shift, and go to state 50

    $default  reduce using rule 12 (type_core)

    type_template_paramaters  go to state 51


State 2

   13 type_core: "bit" •

    $default  reduce using rule 13 (type_core)


State 3

   14 type_core: "bool" •

    $default  reduce using rule 14 (type_core)


State 4

   19 type_core: "char" •

    $default  reduce using rule 19 (type_core)


State 5

    3 type: "const" • type_root
    5 type_root: • non_reference_type
    6          | • reference_type
    7 non_reference_type: • type_core
    8                   | • type_core POINTER_TYPE
    9                   | • type_core "weak" POINTER_TYPE
   10                   | • type_core ARRAYL xvalue_expression ARRAYR
   11 type_core: • TYPENAME type_template_paramaters
   12          | • TYPENAME
   13          | • "bit"
   14          | • "bool"
   15          | • "short"
   16          | • "int"
   17          | • "long"
   18          | • "float"
   19          | • "char"
   23 reference_type: • "ref" non_reference_type
   24               | • "rref" non_reference_type

    TYPENAME  shift, and go to state 1
    "bit"     shift, and go to state 2
    "bool"    shift, and go to state 3
    "char"    shift, and go to state 4
    "float"   shift, and go to state 7
    "int"     shift, and go to state 10
    "long"    shift, and go to state 12
    "ref"     shift, and go to state 18
    "rref"    shift, and go to state 19
    "short"   shift, and go to state 20

    type_root           go to state 52
    non_reference_type  go to state 26
    type_core           go to state 27
    reference_type      go to state 28


State 6

  247 enum: "enum" • "{" enum_members_list "}"

    "{"  shift, and go to state 53


State 7

   18 type_core: "float" •

    $default  reduce using rule 18 (type_core)


State 8

  175 access_modifier: • "public"
  176                | • "private"
  177                | • "protected"
  181 function_header: "func" • access_modifier function_modifiers IDENTIFIER "(" function_argument_list ")" throwable_expression "->" return_types_list
  182                | "func" • IDENTIFIER "(" function_argument_list ")" throwable_expression "->" return_types_list

    IDENTIFIER   shift, and go to state 54
    "private"    shift, and go to state 15
    "protected"  shift, and go to state 16
    "public"     shift, and go to state 17

    access_modifier  go to state 55


State 9

  302 module_name: • IDENTIFIER
  303            | • module_name "." IDENTIFIER
  304            | • module_name "-" IDENTIFIER
  305 import: "import" • module_name ";"
  306       | "import" • ":" IDENTIFIER ";"

    IDENTIFIER  shift, and go to state 56
    ":"         shift, and go to state 57

    module_name  go to state 58


State 10

   16 type_core: "int" •

    $default  reduce using rule 16 (type_core)


State 11

  168 variable_declaration: "let" • access_modifier0 variable_declaration_block_list
  173 access_modifier0: • access_modifier
  174                 | • %empty  ["let"]
  175 access_modifier: • "public"
  176                | • "private"
  177                | • "protected"

    "private"    shift, and go to state 15
    "protected"  shift, and go to state 16
    "public"     shift, and go to state 17

    $default  reduce using rule 174 (access_modifier0)

    access_modifier0  go to state 59
    access_modifier   go to state 32


State 12

   17 type_core: "long" •

    $default  reduce using rule 17 (type_core)


State 13
